--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 /* div, span, section, article, nav, header, footer{
-    border: 1px solid red;
+    outline: 1px solid red;
 } */
 
 p{
@@ -85,6 +85,7 @@ nav a{
 /*******************/
 
 #content{
+    margin-top: 3rem; /*TEMP*/
     width: 100%;
     height: 675px;
     background-image: url(../pics/back2.png);
@@ -146,3 +147,4 @@ footer p{
     font-size: 1.5em;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
+
